# market-risk-simulation-engine

./: Folder_create.py  README.md  pyproject.toml
scripts/: run_backtests.py
src/market_risk_simulation_engine/: backtesting.py
tests/: test_backtesting.py
