[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "market-risk-simulation-engine"
version = "0.1.0"
description = "Market risk simulation and backtesting engine"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]